--- a/src/main/java/org/wfanet/measurement/eventdataprovider/BUILD.bazel
+++ b/src/main/java/org/wfanet/measurement/eventdataprovider/BUILD.bazel
@@ -1,10 +1,27 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_java//java:defs.bzl", "java_binary", "java_proto_library")
 load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
+load("@rules_jvm_external//:defs.bzl", "java_export")
+
+java_export(
+    name = "exported_edp_libs",
+    maven_coordinates = "com.amazon.wfaedp:edp-java-libs:0.0.2",
+    tags = ["manual"],
+    runtime_deps = [
+        ":edp_java_libs",
+    ],
+)
 
 java_binary(
     name = "edp_libs",
     main_class = "NotImportant",
+    runtime_deps = [
+        ":edp_java_libs",
+    ],
+)
+
+java_library(
+    name = "edp_java_libs",
     runtime_deps = [
         ":api_keys_service_java_proto",
         ":certificates_service_java_proto",
