--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -217,7 +217,7 @@ maven.install(
         "io.kubernetes:client-java-extended:" + K8S_CLIENT_VERSION,
         "joda-time:joda-time:2.10.10",
         "org.apache.beam:beam-runners-direct-java:" + APACHE_BEAM_VERSION,
-        "org.apache.beam:beam-runners-spark:" + APACHE_BEAM_VERSION,
+        "org.apache.beam:beam-runners-spark-3:" + APACHE_BEAM_VERSION,
         "org.apache.beam:beam-sdks-java-core:" + APACHE_BEAM_VERSION,
         "org.projectnessie.cel:cel-core:" + PROJECTNESSIE_CEL_VERSION,
         "org.projectnessie.cel:cel-generated-pb:" + PROJECTNESSIE_CEL_VERSION,
