--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/BUILD.bazel
@@ -11,6 +11,7 @@ kt_jvm_test(
         "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
     ],
 )
 
