Add default service config proto for tests

--- a/src/main/k8s/testing/data/BUILD.bazel
+++ b/src/main/k8s/testing/data/BUILD.bazel
@@ -7,3 +7,8 @@ filegroup(
     name = "synthetic_generation_specs",
     srcs = ["synthetic_population_spec.textproto"] + glob(["synthetic_event_group_spec*.textproto"]),
 )
+
+filegroup(
+    name = "service_config",
+    srcs = ["default_service_config.textproto"],
+)
