--- a/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
@@ -73,6 +73,7 @@ kt_jvm_library(
     visibility = ["//visibility:public"],
     deps = [
         ":all_kingdom_services",
+        ":configs",
         "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
         "//src/main/kotlin/org/wfanet/measurement/common/identity/testing",
@@ -90,6 +91,7 @@ kt_jvm_library(
     name = "configs",
     srcs = ["Configs.kt"],
     data = [
+        "//src/main/k8s/testing/data:service_config",
         "//src/main/k8s/testing/secretfiles:all_configs",
         "//src/main/k8s/testing/secretfiles:all_der_files",
         "//src/main/k8s/testing/secretfiles:all_root_certs.pem",
