Add support for different privacy params for single and multiple data providers

--- a/src/main/resources/reporting/postgres/changelog-v2.yaml
+++ b/src/main/resources/reporting/postgres/changelog-v2.yaml
@@ -52,3 +52,9 @@ databaseChangeLog:
 - include:
     file: add-indexes-for-metric-reuse.sql
     relativeToChangeLogFile: true
+- include:
+    file: add-additional-metric-spec-columns-to-metrics.sql
+    relativeToChangeLogFile: true
+- include:
+    file: add-is-single-data-provider-column-to-measurements.sql
+    relativeToChangeLogFile: true
