--- a/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
@@ -73,6 +73,7 @@ kt_jvm_library(
     visibility = ["//visibility:public"],
     deps = [
         ":all_kingdom_services",
+        ":configs",
         "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
         "//src/main/kotlin/org/wfanet/measurement/common/identity/testing",
@@ -90,6 +91,7 @@ kt_jvm_library(
     name = "configs",
     srcs = ["Configs.kt"],
     data = [
+        "//src/main/k8s/testing/data:service_config",
         "//src/main/k8s/testing/secretfiles:all_configs",
         "//src/main/k8s/testing/secretfiles:all_der_files",
         "//src/main/k8s/testing/secretfiles:all_root_certs.pem",
@@ -103,6 +105,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/kingdom:duchy_id_config_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:protocol_config_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/org/jetbrains/annotations",
+        "@wfa_common_jvm//imports/kotlin/io/grpc/service_config:service_config_kt_jvm_proto",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
