--- a/.github/workflows/configure-duchy.yml
+++ b/.github/workflows/configure-duchy.yml
@@ -41,6 +41,7 @@ on:
         options:
         - dev
         - qa
+        - head
       image-tag:
         description: "Tag of container images"
         type: string
