Add smaller synthetic data set for in process tests.

--- a/src/main/k8s/testing/data/BUILD.bazel
+++ b/src/main/k8s/testing/data/BUILD.bazel
@@ -4,8 +4,13 @@ package(
 )
 
 filegroup(
-    name = "synthetic_generation_specs",
-    srcs = ["synthetic_population_spec.textproto"] + glob(["synthetic_event_group_spec*.textproto"]),
+    name = "synthetic_generation_specs_small",
+    srcs = ["synthetic_population_spec_small.textproto"] + glob(["synthetic_event_group_spec_small*.textproto"]),
+)
+
+filegroup(
+    name = "synthetic_generation_specs_large",
+    srcs = ["synthetic_population_spec_large.textproto"] + glob(["synthetic_event_group_spec_large*.textproto"]),
 )
 
 filegroup(
