--- a/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/integration/common/BUILD.bazel
@@ -116,7 +116,10 @@ kt_jvm_library(
 kt_jvm_library(
     name = "synthetic_generation_specs",
     srcs = ["SyntheticGenerationSpecs.kt"],
-    data = ["//src/main/k8s/testing/data:synthetic_generation_specs"],
+    data = [
+        "//src/main/k8s/testing/data:synthetic_generation_specs_large",
+        "//src/main/k8s/testing/data:synthetic_generation_specs_small",
+    ],
     visibility = [
         "//src/main/kotlin/org/wfanet/measurement/integration/common/reporting/v2:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
