--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -3,9 +3,9 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 kt_jvm_test(
     name = "FrequencyVectorBuilderTest",
     srcs = ["FrequencyVectorBuilderTest.kt"],
-    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.FrequencyVectorBuilderTest",
+    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.FrequencyVectorBuilderTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle",
+        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
         "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
@@ -18,9 +18,9 @@ kt_jvm_test(
 kt_jvm_test(
     name = "VidIndexMapTest",
     srcs = ["VidIndexMapTest.kt"],
-    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.VidIndexMapTest",
+    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.VidIndexMapTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle",
+        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
         "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
