--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -16,9 +16,9 @@ kt_jvm_test(
 )
 
 kt_jvm_test(
-    name = "VidIndexMapTest",
-    srcs = ["VidIndexMapTest.kt"],
-    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.VidIndexMapTest",
+    name = "InMemoryVidIndexMapTest",
+    srcs = ["InMemoryVidIndexMapTest.kt"],
+    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.InMemoryVidIndexMapTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
         "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
