--- a/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
@@ -11,7 +11,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
-        "//src/main/kotlin/org/wfanet/measurement/populationdataprovider:__subpackages__"
+        "//src/main/kotlin/org/wfanet/measurement/populationdataprovider:__subpackages__",
     ],
 )
 
@@ -133,6 +133,7 @@ kt_jvm_library(
 kt_jvm_library(
     name = "measurement_results",
     srcs = ["MeasurementResults.kt"],
+    testonly = False,
 )
 
 kt_jvm_library(
@@ -340,4 +341,5 @@ kt_jvm_library(
         "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/common:verification_exception",
         "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/dataprovider",
     ],
+    testonly = False,
 )
