--- a/src/main/kotlin/org/wfanet/measurement/populationdataprovider/daemon/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/populationdataprovider/daemon/BUILD.bazel
@@ -16,6 +16,7 @@ kt_jvm_library(
     srcs = ["PdpFulfillmentDaemon.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:data_provider_simulator",
+        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:population_spec_validator",
         "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:measurement_results",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/eventfiltration:event_filters",
         "//src/main/proto/wfa/measurement/api/v2alpha:certificates_service_kt_jvm_grpc_proto",
