--- a/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
@@ -199,6 +199,9 @@ kt_jvm_test(
     associates = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:metric_calculation_specs_service",
     ],
+    data = [
+        "//src/main/k8s/testing/secretfiles:all_configs",
+    ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.MetricCalculationSpecsServiceTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:principal_server_interceptor",
@@ -220,6 +223,9 @@ kt_jvm_test(
     srcs = ["ReportsServiceTest.kt"],
     associates = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:reports_service",
+    ],
+    data = [
+        "//src/main/k8s/testing/secretfiles:all_configs",
     ],
     test_class = "org.wfanet.measurement.reporting.service.api.v2alpha.ReportsServiceTest",
     deps = [
