Renamed PdpRequisitionDaemon to PdpRequisitionFulfiller and DataProviderSimulator to DataProviderRequisitionFulfiller. Moved DataProviderRequisitionFulfiller to a new non-test package. Updated tests and references to DataProviderRequisitionFulfiller.

--- a/src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
@@ -80,8 +80,8 @@ kt_jvm_test(
 )
 
 kt_jvm_library(
-    name = "pdp_daemon_test",
-    srcs = ["PdpDaemonTest.kt"],
+    name = "pdp_requisition_fulfiller_test",
+    srcs = ["PdpRequisitionFulfillerTest.kt"],
     data = [
         "//src/main/k8s/testing/secretfiles:all_configs",
         "//src/main/k8s/testing/secretfiles:all_der_files",
@@ -89,7 +89,7 @@ kt_jvm_library(
         "//src/main/k8s/testing/secretfiles:edp_trusted_certs.pem",
     ],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/populationdataprovider/daemon:pdp_fulfillment_daemon",
+        "//src/main/kotlin/org/wfanet/measurement/populationdataprovider:pdp_requisition_fulfiller",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/eventfiltration:event_filters",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement:privacy_budget_manager",
@@ -118,9 +118,9 @@ kt_jvm_library(
 
 # TODO(bazelbuild/rules_kotlin#1088): Use kt_jvm_test when fixed.
 java_test(
-    name = "PdpDaemonTest",
-    test_class = "org.wfanet.measurement.loadtest.dataprovider.PdpDaemonTest",
-    runtime_deps = [":pdp_daemon_test"],
+    name = "PdpRequisitionFulfillerTest",
+    test_class = "org.wfanet.measurement.loadtest.dataprovider.PdpRequisitionFulfillerTest",
+    runtime_deps = [":pdp_requisition_fulfiller_test"],
 )
 
 kt_jvm_test(
