Remove dependence on test only messages. Uses descriptors to validate the attribute and event types.

--- a/src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing/BUILD.bazel
@@ -2,6 +2,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
 
 package(
+    default_testonly = True,
     default_visibility = ["//visibility:public"],
 )
 
