--- a/src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
@@ -89,6 +89,8 @@ kt_jvm_library(
         "//src/main/k8s/testing/secretfiles:edp_trusted_certs.pem",
     ],
     deps = [
+        "//src/main/proto/wfa/measurement/api/v2alpha:model_releases_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha:model_rollouts_service_kt_jvm_grpc_proto",
         "//src/main/kotlin/org/wfanet/measurement/populationdataprovider:pdp_requisition_fulfiller",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/eventfiltration:event_filters",
