--- a/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
@@ -12,34 +12,10 @@ package(
 )
 
 kt_jvm_library(
-    name = "data_provider_requisition_fulfiller",
-    srcs = ["DataProviderRequisitionFulfiller.kt"],
+    name = "population_requisition_fulfiller",
+    srcs = ["PopulationRequisitionFulfiller.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:packed_messages",
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
-        "//src/main/proto/wfa/measurement/api/v2alpha:certificates_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:data_providers_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:direct_computation_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_consumers_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:measurements_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
-        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:key_storage",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/throttler",
-        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/common:verification_exception",
-        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/dataprovider",
-    ],
-)
-
-kt_jvm_library(
-    name = "pdp_requisition_fulfiller",
-    srcs = ["PdpRequisitionFulfiller.kt"],
-    deps = [
-        ":data_provider_requisition_fulfiller",
+        "//src/main/kotlin/org/wfanet/measurement/dataprovider:requisition_fulfiller",
         "//src/main/proto/wfa/measurement/api/v2alpha:model_releases_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:model_rollouts_service_kt_jvm_grpc_proto",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:population_spec_validator",
