--- a/src/main/k8s/dev/non_aggregator_secret_kustomization.tmpl.yaml
+++ b/src/main/k8s/dev/non_aggregator_secret_kustomization.tmpl.yaml
@@ -1,4 +1,4 @@
-# Copyright 2023 The Cross-Media Measurement Authors
+# Copyright 2024 The Cross-Media Measurement Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,16 +11,14 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 secretGenerator:
 - name: certs-and-configs
   files:
   - all_root_certs.pem
-  - kingdom_root.pem
-  - kingdom_tls.key
-  - kingdom_tls.pem
+  - {duchy_id}_tls.pem
+  - {duchy_id}_tls.key
+  - {duchy_id}_cs_cert.der
+  - {duchy_id}_cs_private.der
   - duchy_cert_config.textproto
-  - duchy_id_config.textproto
-  - llv2_protocol_config_config.textproto
-  - ro_llv2_protocol_config_config.textproto
-  - hmss_protocol_config_config.textproto
+  - {duchy_id}_protocols_setup_config.textproto
+  - {duchy_id}_kek.tink
