--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -125,6 +125,7 @@ cue_dump(
         "google_cloud_project": GCLOUD_SETTINGS.project,
         "spanner_instance": GCLOUD_SETTINGS.spanner_instance,
         "kingdom_system_api_target": KINGDOM_K8S_SETTINGS.system_api_target,
+        "kingdom_public_api_target": KINGDOM_K8S_SETTINGS.public_api_target,
         "aggregator_system_api_target": DUCHY_K8S_SETTINGS.aggregator_system_api_target,
         "worker1_system_api_target": DUCHY_K8S_SETTINGS.worker1_system_api_target,
         "worker2_system_api_target": DUCHY_K8S_SETTINGS.worker2_system_api_target,
@@ -143,7 +144,8 @@ cue_dump(
     srcs = ["duchy_gke.cue"],
     cue_tags = {
         "duchy_name": "worker1",
-        "duchy_protocols_setup_config": "non_aggregator_protocols_setup_config.textproto",
+        "duchy_protocols_setup_config": "worker1_protocols_setup_config.textproto",
+        "duchy_key_encryption_key_file": "worker1_kek.tink",
         "secret_name": SECRET_NAME,
         "public_api_address_name": DUCHY_K8S_SETTINGS.public_api_address_name,
         "system_api_address_name": DUCHY_K8S_SETTINGS.system_api_address_name,
@@ -155,6 +157,7 @@ cue_dump(
         "google_cloud_project": GCLOUD_SETTINGS.project,
         "spanner_instance": GCLOUD_SETTINGS.spanner_instance,
         "kingdom_system_api_target": KINGDOM_K8S_SETTINGS.system_api_target,
+        "kingdom_public_api_target": KINGDOM_K8S_SETTINGS.public_api_target,
         "aggregator_system_api_target": DUCHY_K8S_SETTINGS.aggregator_system_api_target,
         "worker1_system_api_target": DUCHY_K8S_SETTINGS.worker1_system_api_target,
         "worker2_system_api_target": DUCHY_K8S_SETTINGS.worker2_system_api_target,
@@ -173,7 +176,8 @@ cue_dump(
     srcs = ["duchy_gke.cue"],
     cue_tags = {
         "duchy_name": "worker2",
-        "duchy_protocols_setup_config": "non_aggregator_protocols_setup_config.textproto",
+        "duchy_protocols_setup_config": "worker2_protocols_setup_config.textproto",
+        "duchy_key_encryption_key_file": "worker2_kek.tink",
         "secret_name": SECRET_NAME,
         "public_api_address_name": DUCHY_K8S_SETTINGS.public_api_address_name,
         "system_api_address_name": DUCHY_K8S_SETTINGS.system_api_address_name,
@@ -185,6 +189,7 @@ cue_dump(
         "google_cloud_project": GCLOUD_SETTINGS.project,
         "spanner_instance": GCLOUD_SETTINGS.spanner_instance,
         "kingdom_system_api_target": KINGDOM_K8S_SETTINGS.system_api_target,
+        "kingdom_public_api_target": KINGDOM_K8S_SETTINGS.public_api_target,
         "aggregator_system_api_target": DUCHY_K8S_SETTINGS.aggregator_system_api_target,
         "worker1_system_api_target": DUCHY_K8S_SETTINGS.worker1_system_api_target,
         "worker2_system_api_target": DUCHY_K8S_SETTINGS.worker2_system_api_target,
@@ -203,7 +208,8 @@ cue_dump(
     srcs = ["duchy_eks.cue"],
     cue_tags = {
         "duchy_name": "worker2",
-        "duchy_protocols_setup_config": "non_aggregator_protocols_setup_config.textproto",
+        "duchy_protocols_setup_config": "worker2_protocols_setup_config.textproto",
+        "duchy_key_encryption_key_file": "worker2_kek.tink",
         "secret_name": SECRET_NAME,
         "certificate_id": DUCHY_K8S_SETTINGS.certificate_id,
         "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
@@ -218,6 +224,7 @@ cue_dump(
         "public_api_eip_allocs": DUCHY_K8S_SETTINGS.public_api_eip_allocs,
         "system_api_eip_allocs": DUCHY_K8S_SETTINGS.system_api_eip_allocs,
         "kingdom_system_api_target": KINGDOM_K8S_SETTINGS.system_api_target,
+        "kingdom_public_api_target": KINGDOM_K8S_SETTINGS.public_api_target,
         "aggregator_system_api_target": DUCHY_K8S_SETTINGS.aggregator_system_api_target,
         "worker1_system_api_target": DUCHY_K8S_SETTINGS.worker1_system_api_target,
         "worker2_system_api_target": DUCHY_K8S_SETTINGS.worker2_system_api_target,
@@ -239,7 +246,7 @@ expand_template(
         "{duchy_id}": "aggregator",
         "{duchy_role}": "aggregator",
     },
-    template = "duchy_secret_kustomization.tmpl.yaml",
+    template = "aggregator_secret_kustomization.tmpl.yaml",
 )
 
 expand_template(
@@ -249,7 +256,7 @@ expand_template(
         "{duchy_id}": "worker1",
         "{duchy_role}": "non_aggregator",
     },
-    template = "duchy_secret_kustomization.tmpl.yaml",
+    template = "non_aggregator_secret_kustomization.tmpl.yaml",
 )
 
 expand_template(
@@ -259,7 +266,7 @@ expand_template(
         "{duchy_id}": "worker2",
         "{duchy_role}": "non_aggregator",
     },
-    template = "duchy_secret_kustomization.tmpl.yaml",
+    template = "non_aggregator_secret_kustomization.tmpl.yaml",
 )
 
 kustomization_dir(
