--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -147,10 +147,14 @@ SECRET_FILES = [
     "worker1_tls.pem",
     "worker1_cs_cert.der",
     "worker1_cs_private.der",
+    "worker1_kek.tink",
+    "worker1_protocols_setup_config.textproto",
     "worker2_tls.key",
     "worker2_tls.pem",
     "worker2_cs_cert.der",
     "worker2_cs_private.der",
+    "worker2_kek.tink",
+    "worker2_protocols_setup_config.textproto",
     "edp1_cs_cert.der",
     "edp1_cs_private.der",
     "edp1_enc_private.tink",
@@ -207,6 +211,7 @@ SECRET_FILES = [
     "non_aggregator_protocols_setup_config.textproto",
     "llv2_protocol_config_config.textproto",
     "ro_llv2_protocol_config_config.textproto",
+    "hmss_protocol_config_config.textproto",
     "exchange_workflow.textproto",
     "reporting_tls.key",
     "reporting_tls.pem",
