--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -33,6 +33,22 @@ kt_jvm_test(
 )
 
 kt_jvm_test(
+    name = "FulfillRequisitionRequestBuilderTest",
+    srcs = ["FulfillRequisitionRequestBuilderTest.kt"],
+    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.FulfillRequisitionRequestBuilderTest",
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
+        "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha:protocol_config_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+        "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
+    ],
+)
+
+kt_jvm_test(
     name = "InMemoryVidIndexMapTest",
     srcs = ["InMemoryVidIndexMapTest.kt"],
     test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.InMemoryVidIndexMapTest",
