Replace references to v2alpha ExchangeWorkflow with panel match internal ExchangeWorkflow.

--- a/src/main/kotlin/org/wfanet/panelmatch/client/storage/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/storage/testing/BUILD.bazel
@@ -26,6 +26,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/panelmatch/common/storage",
         "//src/main/kotlin/org/wfanet/panelmatch/common/storage/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/java/org/junit",
