Update ApiClient to return panel match internal types instead of v2alpha types.

--- a/src/main/kotlin/org/wfanet/panelmatch/client/storage/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/storage/testing/BUILD.bazel
@@ -18,6 +18,7 @@ kt_jvm_library(
     name = "testing",
     srcs = glob(["*.kt"]),
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/storage",
         "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/certificates/testing",
