--- a/src/main/kotlin/org/wfanet/panelmatch/client/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/common/BUILD.bazel
@@ -18,6 +18,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/panelmatch/client/privatemembership:query_evaluator_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/privatemembership:query_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/common/compression:compression_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common:guava",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_measurement_system//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
