--- a/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
@@ -6,6 +6,7 @@ kt_jvm_test(
     srcs = ["ExchangeStepLauncherTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeStepLauncherTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
@@ -28,6 +29,7 @@ kt_jvm_test(
     srcs = ["ExchangeStepValidatorImplTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeStepValidatorImplTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
@@ -51,6 +53,7 @@ kt_jvm_test(
     srcs = ["GrpcApiClientTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.GrpcApiClientTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_grpc",
@@ -79,6 +82,7 @@ kt_jvm_test(
     srcs = ["ExchangeTaskExecutorTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeTaskExecutorTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
