Add Support for different Privacy Params for Single and Multiple Data Providers (#1610)

--- a/src/main/resources/reporting/postgres/changelog-v2.yaml
+++ b/src/main/resources/reporting/postgres/changelog-v2.yaml
@@ -52,3 +52,6 @@ databaseChangeLog:
 - include:
     file: add-indexes-for-metric-reuse.sql
     relativeToChangeLogFile: true
+- include:
+    file: add-additional-metric-spec-columns-to-metrics.sql
+    relativeToChangeLogFile: true
