--- a/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library", "kt_jvm_test")
 
 kt_jvm_test(
     name = "FrequencyVectorBuilderTest",
@@ -32,12 +32,13 @@ kt_jvm_test(
     ],
 )
 
-kt_jvm_test(
-    name = "FulfillRequisitionRequestBuilderTest",
+kt_jvm_library(
+    name = "fulfill_requisition_request_builder_test",
+    testonly = True,
     srcs = ["FulfillRequisitionRequestBuilderTest.kt"],
-    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.FulfillRequisitionRequestBuilderTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
+        "//src/main/kotlin/org/wfanet/measurement/testing:requisitions",
         "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:protocol_config_kt_jvm_proto",
@@ -45,6 +46,18 @@ kt_jvm_test(
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+    ],
+)
+
+# TODO(bazelbuild/rules_kotlin#1088): Use kt_jvm_test when fixed.
+# Using kt_jvm_test directly does not correctly set the the path for loading native libraries.
+java_test(
+    name = "FulfillRequisitionRequestBuilderTest",
+    test_class = "org.wfanet.measurement.eventdataprovider.shareshuffle.v2alpha.FulfillRequisitionRequestBuilderTest",
+    runtime_deps = [
+        ":fulfill_requisition_request_builder_test",
     ],
 )
 
