--- a/.github/actions/configure-metrics-aws/action.yml
+++ b/.github/actions/configure-metrics-aws/action.yml
@@ -30,17 +30,7 @@ inputs:
 runs:
   using: composite
   steps:
-  - name: Install cert-manager
-    shell: bash
-    run: |
-      kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.13.3/cert-manager.yaml
-      kubectl rollout status deployment cert-manager-webhook --namespace=cert-manager --timeout=5m
-
-  - name: Install OpenTelemetry operator
-    shell: bash
-    run: |
-      kubectl apply -f https://github.com/open-telemetry/opentelemetry-operator/releases/download/v0.88.0/opentelemetry-operator.yaml
-      kubectl rollout status deployment opentelemetry-operator-controller-manager --namespace=opentelemetry-operator-system --timeout=5m
+  - uses: ./.github/actions/install-otel-operator
 
   - name: Generate configurations
     shell: bash
