--- a/src/main/kotlin/org/wfanet/measurement/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/testing/BUILD.bazel
@@ -9,7 +9,7 @@ package(
 
 kt_jvm_library(
     name = "requisitions",
-    srcs = ["Requisitions.kt",],
+    srcs = ["Requisitions.kt"],
     data = [
         "//src/main/k8s/testing/secretfiles:all_configs",
         "//src/main/k8s/testing/secretfiles:all_der_files",
