--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -129,6 +129,12 @@ bazel_dep(
     version = "0.82.2",
     repo_name = "wfa_common_jvm",
 )
+git_override(
+    module_name = "common-jvm",
+    commit = "1cdb3696bce54b0906396657029cdbea4b76a793",
+    remote = "https://github.com/world-federation-of-advertisers/common-jvm",
+)
+
 bazel_dep(
     name = "common-cpp",
     version = "0.12.0",
@@ -222,9 +228,9 @@ maven.install(
         "org.projectnessie.cel:cel-core:" + PROJECTNESSIE_CEL_VERSION,
         "org.projectnessie.cel:cel-generated-pb:" + PROJECTNESSIE_CEL_VERSION,
         "org.slf4j:slf4j-simple:1.7.32",
-        "software.amazon.awssdk:acmpca:2.17.258",
-        "software.amazon.awssdk:emrserverless:2.17.214",
-        "software.amazon.awssdk:url-connection-client:2.17.214",
+        "software.amazon.awssdk:acmpca:2.23.18",
+        "software.amazon.awssdk:emrserverless:2.23.18",
+        "org.bouncycastle:bcpkix-jdk15on:1.70",
     ],
     fail_if_repin_required = True,
     fetch_sources = True,  # For IDE integration.
