--- a/src/main/kotlin/org/wfanet/panelmatch/common/certificates/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/common/certificates/BUILD.bazel
@@ -9,6 +9,7 @@ kt_jvm_library(
     name = "certificates",
     srcs = glob(["*.kt"]),
     deps = [
+        "//imports/java/org/bouncycastle/bcpkix",
         "//src/main/kotlin/org/wfanet/panelmatch/client/logger",
         "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets",
