Add pdp1_root.pem to secretfiles BUILD file.

--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -46,6 +46,7 @@ filegroup(
     srcs = [
         "aggregator_root.pem",
         "kingdom_root.pem",
+        "pdp1_root.pem"
     ] + glob(["*edp*_root.pem"]),
 )
 
