Improve performance of StreamActiveComputations query.
* Reorder index columns to actually be useful for query.
* Apply clauses to Measurements table before other joins.

--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -63,3 +63,6 @@ databaseChangeLog:
 - include:
     file: add-event-group-metadata-descriptor-types.sql
     relativeToChangeLogFile: true
+- include:
+    file: reorder-measurements-by-continuation-token.sql
+    relativeToChangeLogFile: true
