--- a/src/main/kotlin/org/wfanet/panelmatch/client/tools/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/tools/BUILD.bazel
@@ -79,6 +79,7 @@ kt_jvm_library(
     deps = [
         ":exchange_workflow_format",
         "//imports/java/org/apache/beam/runners/spark",
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/deploy",
         "//src/main/kotlin/org/wfanet/panelmatch/client/deploy/example",
         "//src/main/kotlin/org/wfanet/panelmatch/client/privatemembership",
